--- a/jobs.html
+++ b/jobs.html
@@ -31,7 +31,6 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <!-- header  -->
     <header>
       <nav class="nav-bar">
         <div class="container">
@@ -50,7 +49,7 @@
             <div class="nav-menu">
               <ul class="d-flex al-center">
                 <li id="nav-home">
-                  <a href="index.html" class="active">Home</a>
+                  <a href="index.html">Home</a>
                 </li>
                 <li id="nav-about">
                   <a href="about.html">About Us</a>
@@ -58,7 +57,9 @@
                 <li id="nav-service">
                   <a href="#">Service</a>
                 </li>
-                <li id="nav-career"><a href="career.html">Career</a></li>
+                <li id="nav-career">
+                  <a href="career.html" class="active">Career</a>
+                </li>
                 <li><a href="#" id="nav-contact">Contact Us</a></li>
               </ul>
             </div>
@@ -160,7 +161,7 @@
     <!-- banner -->
     <section
       class="global-banner"
-      style="background-image: url(images/career/career-2.jpg)"
+      style="background-image: url(images/career/career-1.jpg)"
     >
       <div class="overlay"></div>
       <div class="container">
