--- a/serviceInfo.html
+++ b/serviceInfo.html
@@ -41,7 +41,7 @@
                   <a href="about.html">About Us</a>
                 </li>
                 <li id="nav-service">
-                  <a href="#">Service</a>
+                  <a href="#" class="active">Service</a>
                 </li>
                 <li id="nav-career"><a href="career.html">Career</a></li>
                 <li><a href="#" id="nav-contact">Contact Us</a></li>
