--- a/about.html
+++ b/about.html
@@ -50,10 +50,10 @@
             <div class="nav-menu">
               <ul class="d-flex al-center">
                 <li id="nav-home">
-                  <a href="index.html" class="active">Home</a>
+                  <a href="index.html">Home</a>
                 </li>
                 <li id="nav-about">
-                  <a href="about.html">About Us</a>
+                  <a href="about.html" class="active">About Us</a>
                 </li>
                 <li id="nav-service">
                   <a href="#">Service</a>
