--- a/job_des.html
+++ b/job_des.html
@@ -36,7 +36,9 @@
                 <li id="nav-service">
                   <a href="#">Service</a>
                 </li>
-                <li id="nav-career"><a href="career.html">Career</a></li>
+                <li id="nav-career">
+                  <a href="career.html" class="active">Career</a>
+                </li>
                 <li><a href="#" id="nav-contact">Contact Us</a></li>
               </ul>
             </div>
